--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/main.css">
   <title>Layout Responsive</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-  
+<body class="debug">
+  <header class="page-header">
+    <nav>
+      <div class="container">
+        <div class="row justify-between">
+          <div class="col">
+            <a href=""><img src="./img/logo.png" alt=""></a>
+          </div>
+          <div class="col">
+            <ul class="menu align-item-center">
+              <li class="menu__items"><a href=""></a>ciao</li>
+              <li class="menu__items"><a href=""></a>ciao</li>
+              <li class="menu__items"><a href=""></a>ciao</li>
+              <li class="menu__items"><a href=""></a>ciao</li>
+              <li class="menu__items"><a href="" class="btn">ciao</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
 </body>
 </html>
