--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
               <li class="menu__items"><a href=""></a>ciao</li>
               <li class="menu__items"><a href="" class="btn">ciao</a></li>
             </ul>
+            <div class="icon-menu">
+              <i class="fa-solid fa-bars"></i>
+            </div>
           </div>
         </div>
       </div>
