commit-hero-display

--- a/index.html
+++ b/index.html
@@ -7,29 +7,152 @@
   <title>Layout Responsive</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body class="debug">
+<body class="debugg">
   <header class="page-header">
     <nav>
       <div class="container">
         <div class="row justify-between">
           <div class="col">
-            <a href=""><img src="./img/logo.png" alt=""></a>
+            <div class="block-header-item">
+              <a href=""><img src="./img/logo.png" alt=""></a>
+            </div>
           </div>
           <div class="col">
-            <ul class="menu align-item-center">
-              <li class="menu__items"><a href=""></a>ciao</li>
-              <li class="menu__items"><a href=""></a>ciao</li>
-              <li class="menu__items"><a href=""></a>ciao</li>
-              <li class="menu__items"><a href=""></a>ciao</li>
-              <li class="menu__items"><a href="" class="btn">ciao</a></li>
-            </ul>
-            <div class="icon-menu">
-              <i class="fa-solid fa-bars"></i>
+            <div class="block-header-item">
+              <ul class="menu align-item-center">
+                <li class="menu__items"><a href=""></a>Planning</li>
+                <li class="menu__items"><a href=""></a>Testimonials</li>
+                <li class="menu__items"><a href=""></a>Features</li>
+                <li class="menu__items"><a href=""></a>About us</li>
+                <li class="menu__items"><a href="" class="btn">Get Started</a></li>
+              </ul>
+              <div class="icon-menu">
+                <i class="fa-solid fa-bars"></i>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </nav>
   </header>
+
+  <main class="main-page">
+    <section class="hero">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-8 pad-between-col">
+            <div class="hero-flex-div">
+              <div class="col">
+                <div>
+                  <div class="hero-div-title col8">
+                    <h3>Get a application demo</h3>
+                  </div>
+                  <div class="hero-div-title col8">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis laborum veniam at quidem hic placeat, deleniti eum quos nemo officiis impedit cupiditate, distinctio, dolorum nulla quia fugiat repellendus molestias est.</p>
+                  </div>
+                  <div class="hero-div-title col8">
+                    <a href="" class="btn btn-hero"><i class="fa-brands fa-apple"></i> App Store</a>
+                  </div> 
+                </div>
+              </div>
+              <div class="col col-img-phone">
+                <div class="col-img-phone">
+                  <img src="./img/phone.png" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-4 pad-between-col">
+            <div class="hero-flex-div row-reverse">
+              <div class="col">
+                <div>
+                  <div class="hero-div-col4">
+                    <i class="fa-solid fa-file-code"></i>
+                  </div>
+                  <div class="hero-div-col4">
+                    <h3>Clean Code</h3>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div>
+                  <div class="hero-div-col4">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolores sed eius impedit esse natus similique quisquam, facilis magni saepe optio corrupti rerum. Enim fuga molestias debitis, earum nihil numquam?</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-4 pad-between-col">
+            <div class="hero-flex-div row-reverse">
+              <div class="col">
+                <div>
+                  <div class="hero-div-col4">
+                    <i class="fa-solid fa-compass-drafting"></i>
+                  </div>
+                  <div class="hero-div-col4">
+                    <h3>Web Design</h3>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div>
+                  <div class="hero-div-col4">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolores sed eius impedit esse natus similique quisquam, facilis magni saepe optio corrupti rerum. Enim fuga molestias debitis, earum nihil numquam?</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-4 pad-between-col">
+            <div class="hero-flex-div row-reverse">
+              <div class="col">
+                <div>
+                  <div class="hero-div-col4">
+                    <i class="fa-solid fa-laptop-code"></i>
+                  </div>
+                  <div class="hero-div-col4">
+                    <h3>Development</h3>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div>
+                  <div class="hero-div-col4">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolores sed eius impedit esse natus similique quisquam, facilis magni saepe optio corrupti rerum. Enim fuga molestias debitis, earum nihil numquam?</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-4 pad-between-col">
+            <div class="hero-flex-div row-reverse">
+              <div class="col">
+                <div>
+                  <div class="hero-div-col4">
+                    <i class="fa-solid fa-bullhorn"></i>
+                  </div>
+                  <div class="hero-div-col4">
+                    <h3>Branding/h3>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div>
+                  <div class="hero-div-col4">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolores sed eius impedit esse natus similique quisquam, facilis magni saepe optio corrupti rerum. Enim fuga molestias debitis, earum nihil numquam?</p>
+                  </div>
+                </div>
+              </div>
+            </div></div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
