commit-tablet-hero

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
           <div class="col-8 pad-between-col">
             <div class="hero-flex-div">
-              <div class="col">
+              <div class="col-8">
                 <div>
                   <div class="hero-div-title col8">
                     <h3>Get a application demo</h3>
@@ -56,16 +56,14 @@
                   </div> 
                 </div>
               </div>
-              <div class="col col-img-phone">
-                <div class="col-img-phone">
-                  <img src="./img/phone.png" alt="">
-                </div>
+              <div class="col-4 col-img-phone">
+                <img src="./img/phone.png" alt="">
               </div>
             </div>
           </div>
 
           <div class="col-4 pad-between-col">
-            <div class="hero-flex-div row-reverse">
+            <div class="hero-flex-div row-reverse clean-code">
               <div class="col">
                 <div>
                   <div class="hero-div-col4">
@@ -86,7 +84,7 @@
             </div>
           </div>
 
-          <div class="col-4 pad-between-col">
+          <div class="col-4 pad-between-col col4-under">
             <div class="hero-flex-div row-reverse">
               <div class="col">
                 <div>
@@ -108,7 +106,7 @@
             </div>
           </div>
 
-          <div class="col-4 pad-between-col">
+          <div class="col-4 pad-between-col col4-under">
             <div class="hero-flex-div row-reverse">
               <div class="col">
                 <div>
@@ -130,7 +128,7 @@
             </div>
           </div>
 
-          <div class="col-4 pad-between-col">
+          <div class="col-4 pad-between-col col4-under">
             <div class="hero-flex-div row-reverse">
               <div class="col">
                 <div>
