commit-section-bgpurple-desktop

--- a/index.html
+++ b/index.html
@@ -147,7 +147,38 @@
                   </div>
                 </div>
               </div>
-            </div></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-purple">
+      <div class="container-small">
+        <div class="row">
+          <div class="col-6 flex-col6-bgpurple">
+            <div class="col-6 cont-image">
+              <img src="./img/planning1.png" alt="">
+            </div>
+            <div class="col-6 cont-paragraph">
+              <h3>Strategic Plannig</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ratione eaque ipsam? Neque, distinctio illum facilis ad porro aperiam ab.</p>
+            </div>
+          </div>
+          <div class="col-6 cont-second-col6">
+            <div class="block-div-white">
+              <div class="col-6">
+                <img src="./img/planning2.png" alt="">
+              </div>
+              <div class="col-6 block-paragraph">
+                <h3>App Developement</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nisi voluptatem exercitationem eos officiis sapiente!</p>
+                <div class="cont-icon-arrow"> 
+                  <i class="fa-solid fa-arrow-down"></i>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
