commit-testimonials-desktop-mobile

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="col">
             <div class="block-header-item">
               <a href=""><img src="./img/logo.png" alt=""></a>
-            </div>
+            </div> 
           </div>
           <div class="col">
             <div class="block-header-item">
@@ -41,7 +41,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-8 pad-between-col">
+          <div class="col-8">
             <div class="hero-flex-div">
               <div class="col-8">
                 <div>
@@ -62,7 +62,7 @@
             </div>
           </div>
 
-          <div class="col-4 pad-between-col">
+          <div class="col-4">
             <div class="hero-flex-div row-reverse clean-code">
               <div class="col">
                 <div>
@@ -84,7 +84,7 @@
             </div>
           </div>
 
-          <div class="col-4 pad-between-col col4-under">
+          <div class="col-4 col4-under">
             <div class="hero-flex-div row-reverse">
               <div class="col">
                 <div>
@@ -106,7 +106,7 @@
             </div>
           </div>
 
-          <div class="col-4 pad-between-col col4-under">
+          <div class="col-4 col4-under">
             <div class="hero-flex-div row-reverse">
               <div class="col">
                 <div>
@@ -128,7 +128,7 @@
             </div>
           </div>
 
-          <div class="col-4 pad-between-col col4-under">
+          <div class="col-4 col4-under">
             <div class="hero-flex-div row-reverse">
               <div class="col">
                 <div>
@@ -179,6 +179,78 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="testimonials">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="cont-title-paragraph">
+              <p class="cont-title-paragraph__item">TESTIMONIALS</p>
+              <h2 class="cont-title-paragraph__item">We are commited expert partners</h2>
+              <p class="cont-title-paragraph__item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia illo, dolorum aspernatur esse nobis non quasi placeat modi quas consequatur aperiam ut nihil aliquid mollitia ullam tempore ex, debitis eveniet!</p>
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="col12-bg-purple justify-center">
+              <div class="col-4 cont-testimonials-image">
+                <img src="./img/testimonial1.jpg" alt="">
+              </div>
+              <div class="col-8">
+                <div class="cont-testimonials-name">
+                  <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptatem ratione perspiciatis praesentium repudiandae quam eveniet aut aliquid. <i class="fa-solid fa-quote-right"></i></p>
+                </div>
+                <div class="cont-testimonials-name">
+                  <h3>NAT REYNOLDS</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="col12-bg-purple justify-center">
+              <div class="col-4 cont-testimonials-image">
+                <img src="./img/testimonial2.jpg" alt="">
+              </div>
+              <div class="col-8">
+                <div class="cont-testimonials-name">
+                  <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptatem ratione perspiciatis praesentium repudiandae quam eveniet aut aliquid. <i class="fa-solid fa-quote-right"></i></p>
+                </div>
+                <div class="cont-testimonials-name">
+                  <h3>CELIA AMEDIA</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="col12-bg-purple justify-center">
+              <div class="col-4 cont-testimonials-image">
+                <img src="./img/testimonial3.jpg" alt="">
+              </div>
+              <div class="col-8">
+                <div class="cont-testimonials-name">
+                  <p><i class="fa-solid fa-quote-left"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptatem ratione perspiciatis praesentium repudiandae quam eveniet aut aliquid. <i class="fa-solid fa-quote-right"></i></p>
+                </div>
+                <div class="cont-testimonials-name">
+                  <h3>BOB ROBERTS</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="benefit">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 cont-benefit-title ">
+            <h2>Benefits of working with us</h2>
+          </div>
+          <div class="col-4 bg-white"></div>
+          <div class="col-4 bg-white"></div>
+          <div class="col-4"></div>
         </div>
       </div>
     </section>
