commit-section-benefit-dekstop-mobile

--- a/index.html
+++ b/index.html
@@ -248,9 +248,60 @@
           <div class="col-12 cont-benefit-title ">
             <h2>Benefits of working with us</h2>
           </div>
-          <div class="col-4 bg-white"></div>
-          <div class="col-4 bg-white"></div>
-          <div class="col-4"></div>
+
+          <div class="col-4 benefit__col4">
+            <div class="bg-white">
+              <h2>01</h2>
+              <h4>Hight Quality</h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae doloribus eum a necessitatibus ipsa praesentium cupiditate harum quis alias rerum.</p>
+              <a href="" class="btn btn-benefit">more</a>
+            </div>
+          </div>
+
+          <div class="col-4 benefit__col4">
+            <div class="bg-white">
+              <h2>02</h2>
+              <h4>Creative Team</h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae doloribus eum a necessitatibus ipsa praesentium cupiditate harum quis alias rerum.</p>
+              <a href="" class="btn btn-benefit">more</a>
+            </div>
+          </div>
+
+          <div class="col-4 benefit__col4">
+            <div class="bg-white">
+              <h2>03</h2>
+              <h4>Amazing Results</h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae doloribus eum a necessitatibus ipsa praesentium cupiditate harum quis alias rerum.</p>
+              <a href="" class="btn btn-benefit">more</a>
+            </div>
+          </div>
+
+          <div class="col-4 benefit__col4">
+            <div class="bg-white">
+              <h2>04</h2>
+              <h4>Best Pricing</h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae doloribus eum a necessitatibus ipsa praesentium cupiditate harum quis alias rerum.</p>
+              <a href="" class="btn btn-benefit">more</a>
+            </div>
+          </div>
+
+          <div class="col-4 benefit__col4">
+            <div class="bg-white">
+              <h2>05</h2>
+              <h4>Innovations</h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae doloribus eum a necessitatibus ipsa praesentium cupiditate harum quis alias rerum.</p>
+              <a href="" class="btn btn-benefit">more</a>
+            </div>
+          </div>
+
+          <div class="col-4 benefit__col4">
+            <div class="bg-white">
+              <h2>06</h2>
+              <h4>24/7 Support</h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae doloribus eum a necessitatibus ipsa praesentium cupiditate harum quis alias rerum.</p>
+              <a href="" class="btn btn-benefit">more</a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
