commit-section-about-us-desktop

--- a/index.html
+++ b/index.html
@@ -305,6 +305,30 @@
         </div>
       </div>
     </section>
+
+    <section class="about-us">
+      <div class="container">
+        <div class="row">
+          <div class="col-8 cont-about-us">
+            <h2>About Us</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam ut tenetur aut quae eum corrupti natus perferendis omnis. Iure molestiae eum et culpa quod ducimus, consequatur quidem assumenda voluptatem, nesciunt minus dolores id incidunt soluta deserunt quae repellendus at officiis dolor sit sed iste dolorum cupiditate? Eligendi voluptates molestias sapiente!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa, praesentium. Sed enim at repellat quisquam esse aut. Assumenda officia nam, earum quia ad laudantium pariatur accusantium! Deserunt deleniti est possimus.
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, iusto inventore quod voluptate rem saepe, nihil id ex eaque, quo eos aliquid reiciendis nemo aspernatur suscipit perferendis doloribus laudantium atque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident voluptate veritatis quis illo laudantium, perferendis odio! Cum animi dolore eveniet quod, odit, omnis blanditiis harum dolorum ex laudantium iste minima.</p>
+          </div>
+          <div class="col-4">
+            <div class="cont-about-us-image">
+              <div class="about-us__image">
+                <img src="./img/about.jpg" alt="">
+                <span class="quot-icon"><i class="fa-solid fa-quote-left"></i></span>
+              </div>
+              <h3>I help companies tincidunt torto aliquam nulla facilis cras fermentum odio.</h3>
+              <a href="" class="btn btn-benefit"><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
