commit-section-about-us-dekstop-mobile

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             </p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, iusto inventore quod voluptate rem saepe, nihil id ex eaque, quo eos aliquid reiciendis nemo aspernatur suscipit perferendis doloribus laudantium atque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident voluptate veritatis quis illo laudantium, perferendis odio! Cum animi dolore eveniet quod, odit, omnis blanditiis harum dolorum ex laudantium iste minima.</p>
           </div>
-          <div class="col-4">
+          <div class="col-4 cont-col4-about-us">
             <div class="cont-about-us-image">
               <div class="about-us__image">
                 <img src="./img/about.jpg" alt="">
