--- a/index.html
+++ b/index.html
@@ -329,6 +329,34 @@
         </div>
       </div>
     </section>
+
+    <section class="get-started">
+      <div class="container-small">
+        <div class="row justify-center">
+          <div class="col-12">
+            <div class="cont-get-started">
+              <div class="word-opacity">
+                <span>GET STARTED</span>
+              </div>
+              <h3>Simple, Transparent Pricing</h3>
+              <h2>It's Free!</h2>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam itaque recusandae sit eligendi aut culpa quo dicta tenetur, quos quasi!</p>
+              <div class="cont-btn">
+                <a href="" class="btn btn-getstarted">Get Started</a>
+              </div>
+            
+              <p>Copyright 2021 Boolean <i class="fa-solid fa-circle icon-circle"></i> Class XX <i class="fa-solid fa-circle icon-circle"></i> <a href="">Privacy policy</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
+
+  <header>
+    <section class="section-header">
+
+    </section>
+  </header>
 </body>
 </html>
