commit-footer-display-mobile

--- a/index.html
+++ b/index.html
@@ -353,10 +353,19 @@
     </section>
   </main>
 
-  <header>
-    <section class="section-header">
-
+  <footer>
+    <section class="section-footer">
+        <div class="container-small">
+          <div class="row">
+            <div class="col-12">
+              <div class="cont-footer">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores facere qui doloribus iste magni fugiat eveniet omnis earum consequuntur asperiores?</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae, consectetur.</p>
+              </div>
+            </div>
+          </div>
+        </div>
     </section>
-  </header>
+  </footer>
 </body>
 </html>
